# photos

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: error.rs  main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: album.jsx  albums.jsx  auth.jsx  create.jsx  files.jsx  index.jsx  login.jsx  nested.jsx  share.jsx  style.css  upload.jsx  user.jsx  viewer.js  viewer.jsx
frontend/src/agent/: createAgent.jsx  index.jsx
server/: Cargo.toml
server/src/: album.rs  common.rs  delete.rs  engine.rs  file.rs  main.rs  user.rs
server/src/album/: engine.rs  mod.rs  share.rs
src/: album.rs  common.rs  engine.rs  error.rs  file.rs  main.rs  setup.sql  user.rs  wire.rs
wire/: Cargo.toml
wire/src/: lib.rs
