[package]
name = "server"
version = "0.1.0"
authors = ["Parker Huntington <huntingt@mit.edu>"]
edition = "2018"

[dependencies]
hyper = "*"
tokio = { version = "*", features = ["full"] }
routerify = "*"
querystring = "*"
futures = "*"

r2d2 = "*"
r2d2_sqlite = "*"
rusqlite = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

rand = "*"
rust-argon2 = "*"
base64 = "*"
